--- a/src/style.css
+++ b/src/style.css
@@ -17,10 +17,7 @@ body {
 }
 
 .game-board {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
@@ -30,14 +27,14 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: center;
     width: 100%;
     height: 100%;
     background-color: #f5f5f5;
     gap: 3rem;
+    display: flex;
 }
 
-.player-board, .opponent-board {
+.player-board, {
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -48,6 +45,7 @@ body {
 .grid {
     display: flex;
     flex-direction: column;
+    justify-content: flex-start;
     border-color: wheat;
     width: 100%;
     flex-grow: 1;
@@ -58,8 +56,7 @@ body {
     display: flex;
     flex-direction: row;
     border-color: pink;
-    flex-grow: 1;
-    justify-content: space-evenly;
+    justify-content: center;
 }
 
 .cell {
@@ -71,7 +68,8 @@ body {
 }
 
 .player-setup {
-    display: none;
+    display: flex;
+    flex-direction: column;
 }
 
 
@@ -110,4 +108,12 @@ section.player-board [data-status='ship'] {
     display: flex;
     gap: 1rem;
     border-style: inset;
+}
+
+.opponent-board {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start
+    align-items: center;
+    height: 100%;
 }
