--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,10 @@
 body {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
     height: 100dvh;
+
 }
 
 .header {
@@ -19,6 +20,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    height: 85dvh;
     background-color: #f5f5f5;
 }
 
@@ -51,6 +53,13 @@ body {
 
 }
 
+.button{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: #f10000;
+}
 
 .row {
     display: flex;
@@ -64,7 +73,6 @@ body {
     height: 30px;
     border: 1px solid rgba(0, 0, 0, 0.1);
     opacity: .9;
-    background-color: lightblue;
 }
 
 .player-setup {
@@ -72,16 +80,6 @@ body {
     flex-direction: column;
 }
 
-
-
-.game-info {
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: row;
-    justify-content: space-evenly;
-    align-items: flex-start;
-    background-color: #f5f5f5;
-}
 
 .player-board [data-status='ship bow'] {
     background-color: rgba(85, 192, 9, 0.544);
@@ -121,4 +119,20 @@ body {
     justify-content: flex-start
     align-items: center;
     height: 100%;
+}
+
+.instructions{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    gap: 1.5rem;
+    margin: 3rem 0rem;
+    align-items: center;
+    height: 20vh;
+    background-color: #f5f5f5;
+}
+
+
+.cell.ship {
+    background-color: rgba(85, 192, 9, 0.544);
 }
