--- a/src/style.css
+++ b/src/style.css
@@ -1,138 +1,134 @@
 body {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    height: 100dvh;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  height: 100dvh;
 }
 
 .header {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
 }
 
 .main {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 85dvh;
-    background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 85dvh;
+  background-color: #f5f5f5;
 }
 
 .footer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f5f5f5;
 }
 
 .game-board {
-    background-color: #f5f5f5;
+  background-color: #f5f5f5;
 }
 
-.game-container{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    background-color: #f5f5f5;
-    gap: 3rem;
-    display: flex;
+.game-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  background-color: #f5f5f5;
+  gap: 3rem;
+  display: flex;
 }
 
 .player-board {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
-.button{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    background-color: #f10000;
+.button {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #f10000;
 }
 
 .row {
-    display: flex;
-    flex-direction: row;
-    border-color: pink;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  border-color: pink;
+  justify-content: center;
 }
 
 .cell {
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    opacity: .9;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  opacity: 0.9;
 }
 
 .player-setup {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
 }
 
-
-.player-board [data-status='ship bow'] {
-    background-color: rgba(85, 192, 9, 0.544);
-    opacity: .5;
-    border: 1px solid  rgba(0, 0, 0, 1);
-    border-style: inset;
+.player-board [data-status="ship bow"] {
+  background-color: rgba(85, 192, 9, 0.544);
+  opacity: 0.5;
+  border: 1px solid rgba(0, 0, 0, 1);
+  border-style: inset;
 }
 
-.player-board [data-status='ship'] {
-    background-color: rgb(128, 128, 128);
-    opacity: .5;
-    border: 1px solid  rgba(0, 0, 0, 1);
-    border-style: inset;
+.player-board [data-status="ship"] {
+  background-color: rgb(128, 128, 128);
+  opacity: 0.5;
+  border: 1px solid rgba(0, 0, 0, 1);
+  border-style: inset;
 }
 
-[data-status='hit'] {
-    background-color: rgba(219, 18, 18, 0.311);
-    border-style: inset;
-    border: 1px solid  rgba(0, 0, 0, 1);
+[data-status="hit"] {
+  background-color: rgba(219, 18, 18, 0.311);
+  border-style: inset;
+  border: 1px solid rgba(0, 0, 0, 1);
 }
 
-[data-status='miss'] {
-    background-color: rgba(0, 0, 0, 0.1);
-    border-style: inset;
+[data-status="miss"] {
+  background-color: rgba(0, 0, 0, 0.1);
+  border-style: inset;
 }
 
 .player-ships,
 .computer-ships {
-    display: flex;
-    gap: 1rem;
-    border-style: inset;
+  display: flex;
+  gap: 1rem;
+  border-style: inset;
 }
 
 .opponent-board {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start
-    align-items: center;
-    height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  height: 100%;
 }
 
-.instructions{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    gap: 1.5rem;
-    margin: 3rem 0rem;
-    align-items: center;
-    height: 20vh;
-    background-color: #f5f5f5;
+.instructions {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1.5rem;
+  margin: 3rem 0rem;
+  align-items: center;
+  height: 20vh;
+  background-color: #f5f5f5;
 }
-
 
 .cell.ship {
-    background-color: rgba(85, 192, 9, 0.544);
+  background-color: rgba(85, 192, 9, 0.544);
 }
